linuxApp working removing old compose desktopApp